# ptlz_ik

./: LICENSE  README.md
mnn/: CMakeLists.txt  build.sh  forward_net.mnn
mnn/src/: main.cpp
palms/: copy.sh  onnx2mnn.sh
palms/data/: 00joint1.txt  01joint2.txt  02pitch.txt  03roll.txt
palms/net/: forward_net.onnx
palms/scripts/: DataAnalysis.py  DataCheck.py  DataDeal.py  DataLimit.py  generate_data.py  net_onnx.py  net_pt.py  onnx_check.py  test.py
